@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2013, 2016, 2017 Laboratoire de Recherche et
+# Copyright (C) 2013, 2016, 2017, 2019 Laboratoire de Recherche et
 # Développement de l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -97,10 +97,13 @@ test `wc -l < formulas.2` -eq 168
 test `wc -l < formulas.3` -eq 168
 test `wc -l < formulas.4` -eq 168
 
+# Add some carriage returns to simulate MS-DOS files and
+# make sure our parser does not mind.
+sed 's/$/\r/' formulas.2 > formulas.2ms
 # The --csv-escape option is now obsolete and replaced by double
 # quotes in the format string.  So eventually the first two lines
 # should disappear.
-run 0 ltlfilt formulas.2 --csv-escape --format='%L,%f' > formulas.5
+run 0 ltlfilt formulas.2ms --csv-escape --format='%L,%f' > formulas.5
 run 0 ltlfilt formulas.5/2 --csv-escape --format='%L,%f' > formulas.6
 run 0 ltlfilt formulas.2 --format='%L,"%f"' > formulas.5a
 run 0 ltlfilt formulas.5/2 --format='%L,"%f"' > formulas.6a
