@@ -21,6 +21,10 @@ New in spot 2.7.0.dev (not yet release)
     converted into IndexError Python exceptions (instead of aborting
     the program).
 
+  - The LTL parser would choke on carriage returns when command-line
+    tools such as ltlfilt, ltlcross, or ltl2tgba were run on files of
+    formulas with MS-DOS line endings.
+
 New in spot 2.7 (2018-12-11)
 
   Command-line tools:
